<resources>
    <string name="app_name">Ejemplos para Android</string>
    <string name="app_author">Juan Carlos Cuevas Martínez</string>
    <string name="app_description">Aplicación desarrollada para mostrar los ejemplos de Android incluidos en el libro.\nManejo de tareas asíncronas y hebras de trabajo.\nHandlers.\nServicios\nConexiones remotas.\nConectividad</string>
    <string name="app_content_logo">Logo de la aplicación</string>

    <string name="main_button_connect">Conectar</string>
    <string name="main_button_disconnect">Desconectar</string>
    <string name="main_disconnected"><i>Desconectado</i></string>
    <string name="main_title">Cliente TCP</string>
    <string name="main_server_response">-respuesta del servidor-</string>
    <string name="main_button_send">Enviar</string>
    <string name="main_hint_nombre">usuario</string>
    <string name="main_hint_clave">clave</string>
    <string name="main_nuevo_usuario">Nuevo</string>

    <string name="nuevo_usuario_guardar">Guardar</string>
    <string name="nuevo_servicio">Iniciando servicio</string>
    <string name="nuevo_usuario_finalizar">Finalizar</string>
    <string name="servicio_etiqueta">Servicio TCP</string>
    <string name="title_activity_main_menu">MainMenu</string>

    <string name="navigation_drawer_open">Abrir el menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar el menú de navegacón</string>

    <string name="action_about">Acerca de...</string>

    <string name="menu_ejemplos_basico">Conceptos básicos</string>
    <string name="menu_ejemplos_tareas">Hebras y Tareas</string>
    <string name="menu_ejemplos_servicios">Servicios</string>
    <string name="menu_ejemplos_comunicaciones">Comunicaciones</string>
    <string name="menu_ejemplo_1">Ejemplos 1 y 2</string>
    <string name="menu_ejemplo_3">Ejemplo 3</string>
    <string name="menu_ejemplo_4">Ejemplo 4</string>
    <string name="menu_ejemplo_5">Ejemplo 5</string>
    <string name="menu_ejemplo_6">Ejemplo 6</string>
    <string name="menu_ejemplo_7">Ejemplo 7</string>
    <string name="menu_ejemplo_8">Ejemplo 8</string>
    <string name="menu_ejemplo_9">Ejemplo 9</string>
    <string name="menu_ejemplo_10">Ejemplo 10</string>
    <string name="menu_ejemplo_11">Ejemplo 11</string>
    <string name="menu_ejemplo_12">Ejemplo 12</string>
    <string name="menu_ejemplo_14">Ejemplos 13 y 14</string>
    <string name="menu_ejemplos_15_18">Servicios iniciados</string>
    <string name="menu_ejemplo_15">Ejemplo 15</string>
    <string name="menu_ejemplo_16">Ejemplo 16</string>
    <string name="menu_ejemplo_17">Ejemplo 17</string>
    <string name="menu_ejemplo_18">Ejemplo 18</string>
    <string name="menu_ejemplo_19">Ejemplo 19</string>
    <string name="menu_ejemplo_20">Ejemplo 20</string>
    <string name="menu_ejemplo_21">Ejemplo 21 - Ftp</string>
    <string name="menu_ejemplo_22">Ejemplo 22 - Http</string>
    <string name="menu_ejemplo_23">Ejemplo 23 - GET</string>
    <string name="menu_ejemplo_24">Ejemplo 24 - POST</string>
    <string name="menu_ejemplo_25">Ejemplo 25 - Cookies</string>



    <string name="main_label_author">Autor</string>


    <string name="e09_title">Ejemplo 9. Cliente TCP con tarea asíncrona</string>
    <string name="e09_server_response">-respuesta del servidor-</string>
    <string name="e09_button_connect">Conectar</string>
    <string name="e09_button_disconnect">Desconectar</string>

    <string name="e10_title">Ejemplo 10. Cliente TCP con tarea asíncrona para conectar y otra para enviar</string>
    <string name="e10_server_response">-respuesta del servidor-</string>
    <string name="e10_button_connect">Conectar</string>
    <string name="e10_button_disconnect">Desconectar</string>
    <string name="e10_button_send">Autenticar</string>

    <string name="e11_title">Ejemplo 11. Cliente TCP basado en hebras</string>
    <string name="e11_server_response">-respuesta del servidor-</string>
    <string name="e11_button_connect">Conectar</string>
    <string name="e11_button_disconnect">Desconectar</string>
    <string name="e11_button_send">Autenticar</string>

    <string name="e12_title">Ejemplo 12. Cliente TCP basado en hebras con envíos periódicos</string>
    <string name="e12_server_response">-respuesta del servidor-</string>
    <string name="e12_button_connect">Conectar</string>
    <string name="e12_button_disconnect">Desconectar</string>
    <string name="e12_button_send">Autenticar</string>

    <string name="e14_title">Ejemplo 13 y 14. Cliente TCP basado en hebras que emplea handlers</string>
    <string name="e14_server_response">-respuesta del servidor-</string>
    <string name="e14_button_connect">Conectar</string>
    <string name="e14_button_disconnect">Desconectar</string>
    <string name="e14_button_send">Autenticar</string>

    <string name="e15_title">Ejemplo 15. Servicio sencillo para cliente TCP</string>
    <string name="e15_button_connect">Iniciar</string>

    <string name="e16_title">Ejemplo 16. Servicio sencillo para cliente TCP con notificaciones</string>
    <string name="e16_button_connect">Iniciar</string>

    <string name="e17_title">Ejemplo 17. Ejemplo de un servicio en primer plano</string>
    <string name="e17_button_connect">Iniciar</string>

    <string name="e18_title">Ejemplo 18. Ejemplo de un IntentService que realiza la tarea de conexión y envío de mensajes a un servidor</string>
    <string name="e18_button_connect">Iniciar</string>

    <string name="e19_title">Ejemplo 19. Ejemplo de un servicio vinculado en una actividad</string>
    <string name="e19_server_response">-respuesta del servidor-</string>
    <string name="e19_button_connect">Conectar</string>
    <string name="e19_button_disconnect">Desconectar</string>
    <string name="e19_button_send">Autenticar</string>

    <string name="e20_title">Ejemplo 20. Ejemplo de un servicio vinculado con una hebra de trabajo que se comunica a través de handlers</string>
    <string name="e20_server_response">-respuesta del servidor-</string>
    <string name="e20_button_connect">Conectar</string>
    <string name="e20_button_disconnect">Desconectar</string>
    <string name="e20_button_send">Autenticar</string>

    <string name="e21_url">ftp://ftp.ujaen.es/welcome.msg</string>
    <string name="e21_descargar">Descargar</string>
    <string name="e21_description">Ejemplo de descarga de un recurso con FTP</string>
    <string name="e21_descargando">Descargando...</string>

    <string name="e22_url">https://www.android.com</string>
    <string name="e22_descargar">Descargar</string>
    <string name="e22_description">Ejemplo de descarga de un recurso con HTTP</string>
    <string name="e22_descargando">Descargando...</string>

    <string name="e23_url">www.google.es</string>
    <string name="e23_descargar">Descargar</string>
    <string name="e23_description">Ejemplo de formateo de URL para método GET</string>
    <string name="e23_descargando">Descargando...</string>
    <string name="e23_domain">Dominio</string>
    <string name="e23_parametros">Parámetros</string>
    <string name="e23_hint_parametros">Parámetro</string>
    <string name="e23_hint_valor">Valor</string>


    <string name="e24_url">un dominio</string>
    <string name="e24_descargar">Autenticar</string>
    <string name="e24_description">Ejemplo envío de parámetros con el método POST</string>
    <string name="e24_descargando">Descargando...</string>
    <string name="e24_domain">Dominio</string>
    <string name="e24_user">Usuario</string>
    <string name="e24_pass">Clave</string>
    <string name="e24_hint_user">nombre</string>
    <string name="e24_hint_pass">clave</string>


    <string name="e25_url">www.android.com</string>
    <string name="e25_descargar">Enviar</string>
    <string name="e25_description">Ejemplo de formateo de URL para método GET</string>
    <string name="e25_descargando">Descargando...</string>
    <string name="e25_domain">Dominio</string>
    <string name="e25_parametros">Cookie</string>
    <string name="e25_hint_parametros">id</string>
    <string name="e25_hint_valor">valor</string>

    <string name="e25_error_badURI">URI mal formateada</string>
</resources>
