<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="libro.ejemplo01.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
        android:id="@+id/main_title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_connect"
        android:id="@+id/main_connect"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="onConnect" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_send"
        android:id="@+id/main_send"
        android:layout_below="@+id/main_connect"
        android:onClick="onSend"
        android:layout_alignRight="@+id/main_connect"
        android:layout_alignEnd="@+id/main_connect"
        android:layout_alignLeft="@+id/main_connect"
        android:layout_alignStart="@+id/main_connect" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_server_response"
        android:id="@+id/main_response"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="#FFDDDDDD"
        android:padding="10dp"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_nombre"
        android:hint="@string/main_hint_nombre"
        android:layout_below="@+id/main_title"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:singleLine="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_clave"
        android:layout_below="@+id/edit_nombre"
        android:hint="@string/main_hint_clave"
        android:layout_alignLeft="@+id/edit_nombre"
        android:layout_alignStart="@+id/edit_nombre"
        android:layout_alignRight="@+id/edit_nombre"
        android:layout_alignEnd="@+id/edit_nombre"
        android:inputType="textPassword"
        android:password="false"
        android:singleLine="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_nuevo_usuario"
        android:id="@+id/button2"
        android:layout_below="@+id/edit_clave"
        android:layout_centerHorizontal="true"
        android:onClick="nuevoUsuario" />
</RelativeLayout>
