<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejemplo23"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="libro.ejemplos.Ejemplo23">

    <TextView
        android:id="@+id/e23_dominio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBaseline="@+id/e23_edit_url"
        android:layout_alignBottom="@+id/e23_edit_url"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/e23_domain"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/e23_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/e23_description"
        android:textAppearance="@android:style/TextAppearance.Holo.Large" />

    <EditText
        android:id="@+id/e23_edit_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/e23_titulo"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_toEndOf="@+id/e23_dominio"
        android:layout_toRightOf="@+id/e23_dominio"
        android:ems="10"
        android:inputType="textUri"
        android:text="@string/e23_url" />

    <WebView
        android:id="@+id/e23_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/e23_descargar"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/e23_descargar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/e23_linear_parametros"
        android:layout_centerHorizontal="true"
        android:text="@string/e23_descargar" />

    <LinearLayout
        android:id="@+id/e23_linear_parametros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/e23_edit_url"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/e23_parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/e23_parametros"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/e23_edit_param"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/e23_hint_parametros"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/e23_edit_valor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/e23_hint_valor"
            android:inputType="textPersonName" />
    </LinearLayout>
</RelativeLayout>
