<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="libro.ejemplos.EjemplosServiciosVinculados">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/eServicios_title19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/e19_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <Button
            android:id="@+id/eServicios_ejemplo19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onEjemplo19"
            android:text="@string/e19_button_connect" />


        <TextView
            android:id="@+id/eServicios_title20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/e20_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/eServicios_ejemplo20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onEjemplo20"
            android:text="@string/e20_button_connect" />
    </LinearLayout>
</ScrollView>

