<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="libro.ejemplos.Ejemplo3">

    <TextView
        android:id="@+id/e03_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/main_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />

    <EditText
        android:id="@+id/e03_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/e03_title"
        android:layout_centerHorizontal="true"
        android:hint="@string/main_hint_nombre"
        android:inputType="text" />
    <EditText
        android:id="@+id/e03_edit_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/e03_edit_name"
        android:layout_alignLeft="@+id/e03_edit_name"
        android:layout_alignRight="@+id/e03_edit_name"
        android:layout_alignStart="@+id/e03_edit_name"
        android:layout_below="@+id/e03_edit_name"
        android:hint="@string/main_hint_clave"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/e03_button_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/e03_edit_pass"
        android:layout_centerHorizontal="true"
        android:onClick="nuevoUsuario"
        android:text="@string/main_nuevo_usuario" />

</RelativeLayout>
