<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejemplo24"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="libro.ejemplos.Ejemplo24">

    <TextView
        android:id="@+id/e24_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/e24_description"
        android:textAppearance="@android:style/TextAppearance.Holo.Large" />

    <WebView
        android:id="@+id/e24_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/e24_descargar"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/e24_descargar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/e24_linear_parametros"
        android:layout_centerHorizontal="true"
        android:text="@string/e24_descargar" />

    <LinearLayout
        android:id="@+id/e24_linear_parametros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/e24_titulo"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/e24_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e24_user"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            <EditText
                android:id="@+id/e24_edit_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="@string/e24_hint_user"
                android:inputType="textPersonName" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/e24_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e24_pass"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            <EditText
                android:id="@+id/e24_edit_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/e24_hint_pass"
                android:inputType="textPersonName" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
