<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="libro.ejemplos.Ejemplo9">

    <TextView
        android:id="@+id/e09_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/e09_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />

    <Button
        android:id="@+id/e09_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/e09_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="onConnect"
        android:text="@string/e09_button_connect" />

    <TextView
        android:id="@+id/e09_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#FFDDDDDD"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/e09_server_response"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>